add metadata for the new template to pickup

--- a/_posts/2014-02-10-sochi2014-day4.md
+++ b/_posts/2014-02-10-sochi2014-day4.md
@@ -1,9 +1,9 @@
 ---
-layout: post2
+layout: post
 title:  "Sochi 2014: Day 4 Report"
 date:   2014-02-10 22:15:49
 excerpt: 69k <strong>#Sochi2014</strong> tweets from geo tagged from Sochi including tag cloud and photo grid! 
-redirect_from: /sb48
+keywords: "sochi,#sochi2014,olympics,twitter"
 ---
 ## Background
 Tweets were processed between <strong>2/9, 23:40:37 - 2/10, 11:40:15 PSD</strong> for term <strong>#Sochi2014</strong> from <strong>geo coordinates</strong> 43.58,39.72,43.60, 39.74 (Sochi,Russia)<p>
@@ -41,11 +41,7 @@ Tweets were processed between <strong>2/9, 23:40:37 - 2/10, 11:40:15 PSD</strong
 ![Sochi 2014 - day 4: hashtag cloud] (/pics/sochi2014-day4-hashtag-cloud.png)
 
 ## Picture Grid
-<div id="photogrid">
-<section class="Collage effect-parent">
-<div class="Image_Wrapper"><a href="https://twitter.com/CBCOlympics/status/432892773113417728" target="_new"><img src=http://pbs.twimg.com/media/BgHxrvZCIAEWnqV.jpg width=150 height=150/></a></div><div class="Image_Wrapper"><a href="https://twitter.com/BBCSporf/status/432960538096566272" target="_new"><img src=http://pbs.twimg.com/media/BgIvUMOCAAAeIJR.png width=150 height=150/></a></div><div class="Image_Wrapper"><a href="https://twitter.com/BauerHockey/status/432935884501954560" target="_new"><img src=http://pbs.twimg.com/media/BgIY5J4CAAAvK43.jpg width=150 height=150/></a></div><div class="Image_Wrapper"><a href="https://twitter.com/EspritGlisse/status/432900903910133760" target="_new"><img src=http://pbs.twimg.com/media/BgH5FACCEAEdLb6.png width=150 height=150/></a></div><div class="Image_Wrapper"><a href="https://twitter.com/USFigureSkating/status/432908130515972096" target="_new"><img src=http://pbs.twimg.com/media/BgH_pmSIYAAi4Df.jpg width=150 height=150/></a></div><div class="Image_Wrapper"><a href="https://twitter.com/ColbertReport/status/432904812141613056" target="_new"><img src=http://pbs.twimg.com/media/BgH8og3CEAA_161.jpg width=150 height=150/></a></div><div class="Image_Wrapper"><a href="https://twitter.com/FrankRonald1970/status/432912387566755840" target="_new"><img src=http://pbs.twimg.com/media/BgIDhdEIEAANTQp.jpg width=150 height=150/></a></div><div class="Image_Wrapper"><a href="https://twitter.com/EspritGlisse/status/432900281014054912" target="_new"><img src=http://pbs.twimg.com/media/BgH4gv8CcAAy26E.png width=150 height=150/></a></div><div class="Image_Wrapper"><a href="https://twitter.com/MarkLazerus/status/432905296982577152" target="_new"><img src=http://pbs.twimg.com/media/BgH9Et-IcAMmAVP.jpg width=150 height=150/></a></div><div class="Image_Wrapper"><a href="https://twitter.com/COVERGIRL/status/432889549639794688" target="_new"><img src=http://pbs.twimg.com/media/BgHuwGeCYAAEH_F.jpg width=150 height=150/></a></div><div class="Image_Wrapper"><a href="https://twitter.com/CBCOlympics/status/432912626298155008" target="_new"><img src=http://pbs.twimg.com/media/BgIDvWTIcAAWsbI.jpg width=150 height=150/></a></div><div class="Image_Wrapper"><a href="https://twitter.com/Sochi2014/status/432906194140008448" target="_new"><img src=http://pbs.twimg.com/media/BgH948mIUAARl1y.jpg width=150 height=150/></a></div><div class="Image_Wrapper"><a href="https://twitter.com/Sochi2014/status/432901029575659522" target="_new"><img src=http://pbs.twimg.com/media/BgH5MVuCEAAyfUF.jpg width=150 height=150/></a></div><div class="Image_Wrapper"><a href="https://twitter.com/NBCOlympics/status/432910490298109952" target="_new"><img src=http://pbs.twimg.com/media/BgIBzAWCIAABwk-.png width=150 height=150/></a></div><div class="Image_Wrapper"><a href="https://twitter.com/BBCSport/status/432886062986170368" target="_new"><img src=http://pbs.twimg.com/media/BgHrlJECMAA1UTb.jpg width=150 height=150/></a></div><div class="Image_Wrapper"><a href="https://twitter.com/EspritGlisse/status/432905231341350912" target="_new"><img src=http://pbs.twimg.com/media/BgH9A5FCYAAOamm.png width=150 height=150/></a></div><div class="Image_Wrapper"><a href="https://twitter.com/USFigureSkating/status/432912759282757632" target="_new"><img src=http://pbs.twimg.com/media/BgID3FXIUAAg1IE.jpg width=150 height=150/></a></div><div class="Image_Wrapper"><a href="https://twitter.com/sochireport/status/432891363433005057" target="_new"><img src=http://pbs.twimg.com/media/BgHwZshCQAAn5Vi.jpg width=150 height=150/></a></div><div class="Image_Wrapper"><a href="https://twitter.com/BBCSport/status/432884246940643328" target="_new"><img src=http://pbs.twimg.com/media/BgHp7bOCYAEjkm7.jpg width=150 height=150/></a></div><div class="Image_Wrapper"><a href="https://twitter.com/anmarzed/status/432896735745437696" target="_new"><img src=http://pbs.twimg.com/media/BgH1SZgIUAAxlnC.jpg width=150 height=150/></a></div><div class="Image_Wrapper"><a href="https://twitter.com/SenOrrinHatch/status/432885055422083075" target="_new"><img src=http://pbs.twimg.com/media/BgHqqhWCMAAY66F.jpg width=150 height=150/></a></div><div class="Image_Wrapper"><a href="https://twitter.com/AlexShibutani/status/432901175147384832" target="_new"><img src=http://pbs.twimg.com/media/BgH5UzPCIAAQ4Uy.jpg width=150 height=150/></a></div><div class="Image_Wrapper"><a href="https://twitter.com/sportexpress/status/432905217273643008" target="_new"><img src=http://pbs.twimg.com/media/BgH9AGMCYAE1a1y.jpg width=150 height=150/></a></div><div class="Image_Wrapper"><a href="https://twitter.com/usweekly/status/432901382505775104" target="_new"><img src=http://pbs.twimg.com/media/BgH5g3xIAAEREnS.jpg width=150 height=150/></a></div><div class="Image_Wrapper"><a href="https://twitter.com/EspritGlisse/status/432900573705142272" target="_new"><img src=http://pbs.twimg.com/media/BgH4xyYCcAAb9VE.png width=150 height=150/></a></div><div class="Image_Wrapper"><a href="https://twitter.com/WGRZ/status/432959170719936512" target="_new"><img src=http://pbs.twimg.com/media/BgIuElNCEAAbO7X.jpg width=150 height=150/></a></div><div class="Image_Wrapper"><a href="https://twitter.com/ZDF/status/432884441413718016" target="_new"><img src=http://pbs.twimg.com/media/BgHqGwwCcAA0ynT.png width=150 height=150/></a></div><div class="Image_Wrapper"><a href="https://twitter.com/FedericaMasolin/status/432901228146987008" target="_new"><img src=http://pbs.twimg.com/media/BgH5X4-IgAAKJbh.jpg width=150 height=150/></a></div><div class="Image_Wrapper"><a href="https://twitter.com/irenissi/status/432808222005526528" target="_new"><img src=http://pbs.twimg.com/media/BgGkyN3CAAAhS3m.jpg width=150 height=150/></a></div><div class="Image_Wrapper"><a href="https://twitter.com/BBCWorld/status/432790797545918464" target="_new"><img src=http://pbs.twimg.com/media/BgGU7-7IUAAXO6_.jpg width=150 height=150/></a></div><div class="Image_Wrapper"><a href="https://twitter.com/babomedda/status/432895628474347520" target="_new"><img src=http://pbs.twimg.com/media/BgH0R8gIMAA-ie0.jpg width=150 height=150/></a></div><div class="Image_Wrapper"><a href="https://twitter.com/SochiProbIems/status/432960182113419266" target="_new"><img src=http://pbs.twimg.com/media/BgIu_dvCAAA7iJA.jpg width=150 height=150/></a></div><div class="Image_Wrapper"><a href="https://twitter.com/NHLPA/status/432941239885774848" target="_new"><img src=http://pbs.twimg.com/media/BgIdw4xCQAAa3oa.jpg width=150 height=150/></a></div><div class="Image_Wrapper"><a href="https://twitter.com/jianghomeshi/status/432902663165206528" target="_new"><img src=http://pbs.twimg.com/media/BgH6ramIMAEiZan.jpg width=150 height=150/></a></div><div class="Image_Wrapper"><a href="https://twitter.com/EdmontonOilers/status/432913417221853184" target="_new"><img src=http://pbs.twimg.com/media/BgIEdZTCUAA7Gah.jpg width=150 height=150/></a></div><div class="Image_Wrapper"><a href="https://twitter.com/YannBertrand/status/432904770203164672" target="_new"><img src=http://pbs.twimg.com/media/BgH8mEMIcAAIlsw.jpg width=150 height=150/></a></div><div class="Image_Wrapper"><a href="https://twitter.com/Nepareizais/status/432905884247678976" target="_new"><img src=http://pbs.twimg.com/media/BgH9m6wCYAAmYji.jpg width=150 height=150/></a></div><div class="Image_Wrapper"><a href="https://twitter.com/shutupbuck/status/432910322563698688" target="_new"><img src=http://pbs.twimg.com/media/BgIBpQxCUAAiboP.jpg width=150 height=150/></a></div><div class="Image_Wrapper"><a href="https://twitter.com/Sochi2014_Probs/status/432894057703292928" target="_new"><img src=http://pbs.twimg.com/media/BgFNaWTCEAAseJG.jpg width=150 height=150/></a></div>
-</section>
-</div>
+![Sochi 2014 - day 4: photo grid] (/pics/sochi2014-day4-photogrid.png)
 
 
 ## Tools
