remove tag from description

--- a/_posts/2014-02-02-sb48.md
+++ b/_posts/2014-02-02-sb48.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Super Bowl 48: Halftime Twitter Report"
 date:   2014-02-02 22:18:49
-excerpt: 20k <strong>superbowl</strong> tweets from East Rutherford during halftime. 
+excerpt: 20k superbowl tweets from East Rutherford during halftime. 
 keywords: "#sb48,super bowl,twitter"
 redirect_from: /sb48
 ---
