--- a/_posts/2014-02-10-sochi2014-day4.md
+++ b/_posts/2014-02-10-sochi2014-day4.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Sochi 2014: Day 4 Report"
 date:   2014-02-10 22:15:49
-excerpt: 69k <strong>#Sochi2014</strong> tweets from geo tagged from Sochi including tag cloud and photo grid! 
+excerpt: 69k Sochi2014 tweets from geo tagged from Sochi including tag cloud and photo grid! 
 keywords: "sochi,#sochi2014,olympics,twitter"
 ---
 ## Background
