--- a/_posts/2014-02-02-sb48.md
+++ b/_posts/2014-02-02-sb48.md
@@ -2,7 +2,8 @@
 layout: post
 title:  "Super Bowl 48: Halftime Twitter Report"
 date:   2014-02-02 22:18:49
-excerpt: 20k superbowl tweets from East Rutherford during halftime. 
+excerptimage: /pics/superbowl-200px.png
+excerpt: 20k superbowl tweets from more than 19K people in East Rutherford during the halftime show. Driven by node.js, mongodb & d3. 
 keywords: "#sb48,super bowl,twitter"
 redirect_from: /sb48
 ---
