Link to image source

--- a/_posts/2014-02-02-sb48.md
+++ b/_posts/2014-02-02-sb48.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Super Bowl 48: Halftime Twitter Report"
 date:   2014-02-02 22:18:49
 excerptimage: http://upload.wikimedia.org/wikipedia/en/thumb/1/16/Super_Bowl_logo.svg/200px-Super_Bowl_logo.svg.png
-excerpt: 20k superbowl tweets from more than 19K people in East Rutherford during the halftime show. Driven by node.js, mongodb & d3. 
+excerpt: 20k superbowl tweets from more than 19K people in East Rutherford during the halftime show. Driven by node.js, mongodb & d3. <br/><br/>Image Source <a href="http://www.wikimedia.org">WikiMedia</a>
 keywords: "#sb48,super bowl,twitter"
 redirect_from: /sb48
 ---
