Add image alt holder

--- a/_posts/2014-02-10-sochi2014-day4.md
+++ b/_posts/2014-02-10-sochi2014-day4.md
@@ -2,6 +2,7 @@
 layout: post
 title:  "Sochi 2014: Day 4 Report"
 date:   2014-02-10 22:15:49
+excerptimagealt: "Sochi2014 user tweet frequency graph"
 excerptimage: /pics/sochi2014-day4-userfrequency.png
 excerpt: 69k Sochi2014 tweets from geo tagged from Sochi including tag cloud and photo grid! Driven by node.js, mongo.db & d3.
 keywords: "sochi,#sochi2014,olympics,twitter"
