--- a/_posts/2014-02-02-sb48.md
+++ b/_posts/2014-02-02-sb48.md
@@ -7,6 +7,13 @@ excerptimage: http://upload.wikimedia.org/wikipedia/en/thumb/1/16/Super_Bowl_log
 excerpt: 20k superbowl tweets from more than 19K people in East Rutherford during the halftime show. Driven by node.js, mongodb & d3. <br/><br/>Image Source WikiMedia.
 keywords: "#sb48,super bowl,twitter"
 redirect_from: /sb48
+tags: 
+- analytics
+- twitter
+- d3
+- dataviz
+- sb48
+- superbowl48
 ---
 ## Background
 Tweets were processed between <strong>17:04:45 - 17:48:59 PST</strong> for term <strong>superbowl</strong> from <strong>geo coordinates</strong> -74.10,40.81,-74.08,40.84 (East Rutherford)<p>
