--- a/_posts/2014-02-10-sochi2014-day4.md
+++ b/_posts/2014-02-10-sochi2014-day4.md
@@ -6,6 +6,12 @@ excerptimagealt: "Sochi2014 user tweet frequency graph"
 excerptimage: /pics/sochi2014-day4-userfrequency.png
 excerpt: 69k Sochi2014 tweets from geo tagged from Sochi including tag cloud and photo grid! Driven by node.js, mongo.db & d3.
 keywords: "sochi,#sochi2014,olympics,twitter"
+tag:
+- analytics
+- twitter   
+- d3     
+- dataviz 
+- sochi 
 ---
 ## Background
 Tweets were processed between <strong>2/9, 23:40:37 - 2/10, 11:40:15 PSD</strong> for term <strong>#Sochi2014</strong> from <strong>geo coordinates</strong> 43.58,39.72,43.60, 39.74 (Sochi,Russia)<p>
