--- a/_posts/2014-02-10-sochi2014-day4.md
+++ b/_posts/2014-02-10-sochi2014-day4.md
@@ -57,3 +57,7 @@ Tweets were processed between <strong>2/9, 23:40:37 - 2/10, 11:40:15 PSD</strong
 
 ## Tools
 [node.js](http://nodejs.org), [d3](https://github.com/mbostock/d3), [MongoDB](http://www.mongodb.org), [heroku](http://heroku.com) & [github](http://www.github.com)  
+
+##Github Repository
+Checkout https://github.com/harishvc/twitter-stream-analytics for the code driving this report
+
