--- a/_posts/2014-02-10-sochi2014-day4.md
+++ b/_posts/2014-02-10-sochi2014-day4.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Sochi 2014: Day 4 Report"
+title:  "Sochi 2014: Day 4 Twitter Report"
 date:   2014-02-10 22:15:49
 excerptimagealt: "Sochi2014 user tweet frequency graph"
 excerptimage: /pics/sochi2014-day4-userfrequency.png
