--- a/_posts/2014-02-10-sochi2014-day4.md
+++ b/_posts/2014-02-10-sochi2014-day4.md
@@ -18,7 +18,7 @@ tag:
 ---
 
 ## Background
-Tweets were processed between <strong>2/9, 23:40:37 - 2/10, 11:40:15 PSD</strong> for term <strong>#Sochi2014</strong> from <strong>geo coordinates</strong> 43.58,39.72,43.60, 39.74 (Sochi,Russia)<p>
+Tweets were processed between <strong>2/9, 23:40:37 - 2/10, 11:40:15 PSD</strong> for term <strong>#Sochi2014</strong> from <strong>geo coordinates</strong> 43.58,39.72,43.60, 39.74 (Sochi,Russia)
 
 ## Summary
 * 69,528 tweets from 51,237 people
@@ -60,5 +60,5 @@ Tweets were processed between <strong>2/9, 23:40:37 - 2/10, 11:40:15 PSD</strong
 [node.js](http://nodejs.org), [d3](https://github.com/mbostock/d3), [MongoDB](http://www.mongodb.org), [heroku](http://heroku.com) & [github](http://www.github.com)  
 
 ## Github Repository
-Checkout https://github.com/harishvc/twitter-stream-analytics for the code driving this report
+Checkout [Twitter Stream Analytics](https://github.com/harishvc/twitter-stream-analytics) for the code driving this report
 
