--- a/_posts/2014-02-02-sb48.md
+++ b/_posts/2014-02-02-sb48.md
@@ -52,4 +52,4 @@ Tweets were processed between <strong>17:04:45 - 17:48:59 PST</strong> for term 
 [node.js](http://nodejs.org), [d3](https://github.com/mbostock/d3), [MongoDB](http://www.mongodb.org), [heroku](http://heroku.com) & [github](http://www.github.com)  
 
 ## Github Repository
-Checkout https://github.com/harishvc/twitter-stream-analytics for the code driving this report
+Checkout [Twitter Stream Analytics](https://github.com/harishvc/twitter-stream-analytics) for the code driving this report.
