remove unmatched <p> tag

--- a/_posts/2014-02-02-sb48.md
+++ b/_posts/2014-02-02-sb48.md
@@ -19,7 +19,7 @@ tag:
 - mongodb
 ---
 ## Background
-Tweets were processed between <strong>17:04:45 - 17:48:59 PST</strong> for term <strong>superbowl</strong> from <strong>geo coordinates</strong> -74.10,40.81,-74.08,40.84 (East Rutherford)<p>
+Tweets were processed between <strong>17:04:45 - 17:48:59 PST</strong> for term <strong>superbowl</strong> from <strong>geo coordinates</strong> -74.10,40.81,-74.08,40.84 (East Rutherford)
 
 ## Summary
 * 20,753 tweets from 19,398 people
